--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: var(--light-color);
+  background-color: var(--dark-color);
   font-size: var(--body-font-size-xs);
 }
 
